--- a/notebook/GroupChat_get_latest_pr_from_mlnet.ipynb
+++ b/notebook/GroupChat_get_latest_pr_from_mlnet.ipynb
@@ -503,7 +503,7 @@
     }
    ],
    "source": [
-    "var conversation = await admin.SendMessageToGroupAsync(groupChat, \"Here's the first step to resolve: Send a GET request to the GitHub API to retrieve the list of pull requests for the mlnet repo.\", 30, false);"
+    "var conversation = await admin.SendMessageToGroupAsync(groupChat, \"Here's the first step to resolve: Send a GET request to the GitHub API to retrieve the list of pull requests for the mlnet repo.\", 30, true);"
    ]
   }
  ],
