--- a/notebook/TwoAgentChat_Coding.ipynb
+++ b/notebook/TwoAgentChat_Coding.ipynb
@@ -32,9 +32,34 @@
    },
    "outputs": [
     {
+     "ename": "Error",
+     "evalue": "Microsoft.DotNet.Interactive.NoSuitableKernelException: No kernel found for Microsoft.DotNet.Interactive.Commands.RequestHoverText with target kernel '.NET'.\r\n   at Microsoft.DotNet.Interactive.Commands.KernelCommand.InvokeAsync(KernelInvocationContext context) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Commands\\KernelCommand.cs:line 184\r\n   at Microsoft.DotNet.Interactive.Kernel.HandleAsync(KernelCommand command, KernelInvocationContext context) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.cs:line 323\r\n   at Microsoft.DotNet.Interactive.CompositeKernel.HandleAsync(KernelCommand command, KernelInvocationContext context) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\CompositeKernel.cs:line 183\r\n   at Microsoft.DotNet.Interactive.KernelCommandPipeline.<BuildPipeline>b__6_0(KernelCommand command, KernelInvocationContext context, KernelPipelineContinuation _) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 60\r\n   at Microsoft.DotNet.Interactive.KernelCommandPipeline.<>c__DisplayClass6_1.<<BuildPipeline>b__3>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 75\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.DotNet.Interactive.App.KernelExtensions.<>c__DisplayClass3_0.<<UseTelemetrySender>b__0>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\dotnet-interactive\\KernelExtensions.cs:line 124\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.DotNet.Interactive.KernelCommandPipeline.<>c__DisplayClass6_1.<<BuildPipeline>b__3>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 75\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.DotNet.Interactive.App.KernelExtensionLoader.<>c__DisplayClass0_0.<<UseNuGetExtensions>b__0>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\dotnet-interactive\\KernelExtensionLoader.cs:line 21\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.DotNet.Interactive.KernelCommandPipeline.<>c__DisplayClass6_0.<<BuildPipeline>g__Combine|2>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 73\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.DotNet.Interactive.KernelCommandPipeline.<>c__DisplayClass6_0.<<BuildPipeline>g__Combine|2>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 73\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.DotNet.Interactive.KernelCommandPipeline.SendAsync(KernelCommand command, KernelInvocationContext context) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 41",
+     "output_type": "error",
+     "traceback": [
+      "Microsoft.DotNet.Interactive.NoSuitableKernelException: No kernel found for Microsoft.DotNet.Interactive.Commands.RequestHoverText with target kernel '.NET'.\r\n",
+      "   at Microsoft.DotNet.Interactive.Commands.KernelCommand.InvokeAsync(KernelInvocationContext context) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Commands\\KernelCommand.cs:line 184\r\n",
+      "   at Microsoft.DotNet.Interactive.Kernel.HandleAsync(KernelCommand command, KernelInvocationContext context) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.cs:line 323\r\n",
+      "   at Microsoft.DotNet.Interactive.CompositeKernel.HandleAsync(KernelCommand command, KernelInvocationContext context) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\CompositeKernel.cs:line 183\r\n",
+      "   at Microsoft.DotNet.Interactive.KernelCommandPipeline.<BuildPipeline>b__6_0(KernelCommand command, KernelInvocationContext context, KernelPipelineContinuation _) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 60\r\n",
+      "   at Microsoft.DotNet.Interactive.KernelCommandPipeline.<>c__DisplayClass6_1.<<BuildPipeline>b__3>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 75\r\n",
+      "--- End of stack trace from previous location ---\r\n",
+      "   at Microsoft.DotNet.Interactive.App.KernelExtensions.<>c__DisplayClass3_0.<<UseTelemetrySender>b__0>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\dotnet-interactive\\KernelExtensions.cs:line 124\r\n",
+      "--- End of stack trace from previous location ---\r\n",
+      "   at Microsoft.DotNet.Interactive.KernelCommandPipeline.<>c__DisplayClass6_1.<<BuildPipeline>b__3>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 75\r\n",
+      "--- End of stack trace from previous location ---\r\n",
+      "   at Microsoft.DotNet.Interactive.App.KernelExtensionLoader.<>c__DisplayClass0_0.<<UseNuGetExtensions>b__0>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\dotnet-interactive\\KernelExtensionLoader.cs:line 21\r\n",
+      "--- End of stack trace from previous location ---\r\n",
+      "   at Microsoft.DotNet.Interactive.KernelCommandPipeline.<>c__DisplayClass6_0.<<BuildPipeline>g__Combine|2>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 73\r\n",
+      "--- End of stack trace from previous location ---\r\n",
+      "   at Microsoft.DotNet.Interactive.KernelCommandPipeline.<>c__DisplayClass6_0.<<BuildPipeline>g__Combine|2>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 73\r\n",
+      "--- End of stack trace from previous location ---\r\n",
+      "   at Microsoft.DotNet.Interactive.KernelCommandPipeline.SendAsync(KernelCommand command, KernelInvocationContext context) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 41"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "<div><div><strong>Restore sources</strong><ul><li><span>https://www.myget.org/F/agentchat/api/v3/index.json</span></li></ul></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.Core, 0.2.7</span></li><li><span>AgentChat.DotnetInteractiveFunction, 0.2.7</span></li><li><span>AgentChat.Example.Share, 0.2.7</span></li><li><span>AgentChat.GPT, 0.2.7</span></li></ul></div></div>"
+       "<div><div><strong>Restore sources</strong><ul><li><span>https://www.myget.org/F/agentchat/api/v3/index.json</span></li></ul></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.Core, 0.3.0</span></li><li><span>AgentChat.DotnetInteractiveFunction, 0.3.0</span></li><li><span>AgentChat.Example.Share, 0.3.0</span></li><li><span>AgentChat.GPT, 0.3.0</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -261,31 +286,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "function name: Greeting\n",
-      "raw function call: {\n",
-      "  \"greeting\": \"hello\"\n",
-      "}\n",
       "Message from Runner\n",
       "--------------------\n",
       "NO_CODE_AVAILABLE\n",
       "--------------------\n",
       "\n",
-      "function name: RunCode\n",
-      "raw function call: {\n",
-      "  \"code\": \"Console.WriteLine(1+1+1);\"\n",
-      "}\n",
       "Message from Runner\n",
       "--------------------\n",
       "3\n",
       "\n",
       "--------------------\n",
       "\n",
-      "function name: InstallNugetPackages\n",
-      "raw function call: {\n",
-      "  \"nugetPackages\": [\n",
-      "    \"Microsoft.ML\"\n",
-      "  ]\n",
-      "}\n",
       "Message from Runner\n",
       "--------------------\n",
       "Installed nuget packages:\n",
@@ -329,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -351,112 +362,88 @@
       "```csharp\n",
       "using System;\n",
       "\n",
-      "int Fibonacci(int n)\n",
+      "namespace Fibonacci\n",
       "{\n",
-      "    if (n <= 1)\n",
-      "        return n;\n",
-      "    else\n",
-      "        return Fibonacci(n - 1) + Fibonacci(n - 2);\n",
+      "    class Program\n",
+      "    {\n",
+      "        static void Main(string[] args)\n",
+      "        {\n",
+      "            int n = 10;\n",
+      "            int result = Fibonacci(n);\n",
+      "            Console.WriteLine($\"The 10th Fibonacci number is: {result}\");\n",
+      "        }\n",
+      "\n",
+      "        static int Fibonacci(int n)\n",
+      "        {\n",
+      "            if (n <= 1)\n",
+      "                return n;\n",
+      "\n",
+      "            int[] fib = new int[n + 1];\n",
+      "            fib[0] = 0;\n",
+      "            fib[1] = 1;\n",
+      "\n",
+      "            for (int i = 2; i <= n; i++)\n",
+      "            {\n",
+      "                fib[i] = fib[i - 1] + fib[i - 2];\n",
+      "            }\n",
+      "\n",
+      "            return fib[n];\n",
+      "        }\n",
+      "    }\n",
       "}\n",
-      "\n",
-      "int n = 10;\n",
-      "int result = Fibonacci(n);\n",
-      "\n",
-      "Console.WriteLine($\"What's the {n}th of Fibonacci?\");\n",
-      "Console.WriteLine($\"The {n}th of Fibonacci is: {result}\");\n",
       "```\n",
       "\n",
+      "The 10th Fibonacci number is: 55\n",
       "--------------------\n",
       "\n",
-      "function name: RunCode\n",
-      "raw function call: {\n",
-      "  \"code\": \"using System;\\n\\nint Fibonacci(int n)\\n{\\n    if (n <= 1)\\n        return n;\\n    else\\n        return Fibonacci(n - 1) + Fibonacci(n - 2);\\n}\\n\\nint n = 10;\\nint result = Fibonacci(n);\\n\\nConsole.WriteLine($\\\"What's the {n}th of Fibonacci?\\\");\\nConsole.WriteLine($\\\"The {n}th of Fibonacci is: {result}\\\");\"\n",
-      "}\n",
       "Message from Runner\n",
       "--------------------\n",
-      "What's the 10th of Fibonacci?\n",
-      "\n",
-      "The 10th of Fibonacci is: 55\n",
-      "\n",
+      "Error: (3,1): error CS7021: Cannot declare namespace in script code\n",
       "--------------------\n",
       "\n",
       "Message from Coder\n",
       "--------------------\n",
+      "The error is caused by declaring a namespace in the script code. In dotnet script, we don't need to declare a namespace. Here's the fixed code:\n",
+      "\n",
       "```csharp\n",
+      "int n = 10;\n",
+      "int result = Fibonacci(n);\n",
+      "Console.WriteLine($\"The 10th Fibonacci number is: {result}\");\n",
+      "\n",
       "int Fibonacci(int n)\n",
       "{\n",
       "    if (n <= 1)\n",
       "        return n;\n",
-      "    else\n",
-      "        return Fibonacci(n - 1) + Fibonacci(n - 2);\n",
+      "\n",
+      "    int[] fib = new int[n + 1];\n",
+      "    fib[0] = 0;\n",
+      "    fib[1] = 1;\n",
+      "\n",
+      "    for (int i = 2; i <= n; i++)\n",
+      "    {\n",
+      "        fib[i] = fib[i - 1] + fib[i - 2];\n",
+      "    }\n",
+      "\n",
+      "    return fib[n];\n",
       "}\n",
-      "\n",
-      "int n = 10;\n",
-      "int result = Fibonacci(n);\n",
-      "\n",
-      "Console.WriteLine($\"What's the {n}th of Fibonacci?\");\n",
-      "Console.WriteLine($\"The {n}th of Fibonacci is: {result}\");\n",
       "```\n",
       "\n",
+      "The 10th Fibonacci number is: 55\n",
       "\n",
       "--------------------\n",
       "\n",
-      "function name: RunCode\n",
-      "raw function call: {\n",
-      "  \"code\": \"int Fibonacci(int n)\\r\\n{\\r\\n    if (n <= 1)\\r\\n        return n;\\r\\n    else\\r\\n        return Fibonacci(n - 1) + Fibonacci(n - 2);\\r\\n}\\r\\n\\r\\nint n = 10;\\r\\nint result = Fibonacci(n);\\r\\n\\r\\nConsole.WriteLine($\\\"What's the {n}th of Fibonacci?\\\");\\r\\nConsole.WriteLine($\\\"The {n}th of Fibonacci is: {result}\\\");\"\n",
-      "}\n",
       "Message from Runner\n",
       "--------------------\n",
-      "What's the 10th of Fibonacci?\n",
-      "\n",
-      "The 10th of Fibonacci is: 55\n",
+      "The 10th Fibonacci number is: 55\n",
       "\n",
       "--------------------\n",
       "\n",
-      "Message from Coder\n",
-      "--------------------\n",
-      "```csharp\n",
-      "int Fibonacci(int n)\n",
-      "{\n",
-      "    if (n <= 1)\n",
-      "        return n;\n",
-      "    else\n",
-      "        return Fibonacci(n - 1) + Fibonacci(n - 2);\n",
-      "}\n",
-      "\n",
-      "int n = 10;\n",
-      "int result = Fibonacci(n);\n",
-      "\n",
-      "Console.WriteLine($\"What's the {n}th of Fibonacci?\");\n",
-      "Console.WriteLine($\"The {n}th of Fibonacci is: {result}\");\n",
-      "```\n",
-      "\n",
-      "\n",
-      "\n",
-      "--------------------\n",
-      "\n",
-      "function name: RunCode\n",
-      "raw function call: {\n",
-      "  \"code\": \"int Fibonacci(int n)\\r\\n{\\r\\n    if (n <= 1)\\r\\n        return n;\\r\\n    else\\r\\n        return Fibonacci(n - 1) + Fibonacci(n - 2);\\r\\n}\\r\\n\\r\\nint n = 10;\\r\\nint result = Fibonacci(n);\\r\\n\\r\\nConsole.WriteLine($\\\"What's the {n}th of Fibonacci?\\\");\\r\\nConsole.WriteLine($\\\"The {n}th of Fibonacci is: {result}\\\");\"\n",
-      "}\n",
-      "Message from Runner\n",
-      "--------------------\n",
-      "What's the 10th of Fibonacci?\n",
-      "\n",
-      "The 10th of Fibonacci is: 55\n",
-      "\n",
-      "--------------------\n",
-      "\n",
-      "function name: TaskComplete\n",
-      "raw function call: {\n",
-      "  \"msg\": \"The 10th of Fibonacci is: 55\"\n",
-      "}\n",
       "Message from Coder\n",
       "--------------------\n",
       "[COMPLETE]\n",
       "--------------------\n",
       "\n",
-      "Message from \n",
+      "Message from User\n",
       "--------------------\n",
       "[GROUPCHAT_TERMINATE]\n",
       "--------------------\n",
@@ -466,10 +453,10 @@
    ],
    "source": [
     "// use runner agent to auto-reply message from coder\n",
-    "var user = runner.WithAutoReply(async (msgs) => {\n",
+    "var user = runner.CreateAutoReplyAgent(\"User\", async (msgs, ct) => {\n",
     "    // if last message contains \"COMPLETE\", stop sending messages to runner agent and fall back to user agent\n",
     "    if (msgs.Last().Content.Contains(\"[COMPLETE]\"))\n",
-    "        return new Message(ChatRole.Assistant, GroupChatFunction.TERMINATE); // return TERMINATE to stop conversation\n",
+    "        return new Message(ChatRole.Assistant, GroupChatFunction.TERMINATE, from: \"User\"); // return TERMINATE to stop conversation\n",
     "    \n",
     "    // otherwise, send message to runner agent to either run code or install nuget packages and get the reply\n",
     "    return await runner.SendMessageAsync(msgs.Last());\n",
